Add the introduction_to_statistical_learningparagraph

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,7 @@ book:
   date: last-modified
   chapters:
     - index.qmd
-    - intro.qmd
-    - summary.qmd
-    - references.qmd
+    - introduction_to_statistical_learning.qmd
 
 bibliography: references.bib
 
